--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
     <body>
         <div class="body-container">
+            <div class="aviso">AVISO: Através deste site, você está apenas realizando uma contagem pessoal de votos.<br>Para votar no esA, acesse o link da <a href="https://docs.google.com/forms/d/e/1FAIpQLSfBENrsyw0j0I7wSTOBse1WfyzJTz3PXwud55Frxmh1QdGarw/viewform">Votação</a>!</div>
             <div class="esa-card"></div>
             <div class="controls-label">Total de Votos:</div>
             <div class="controls">
