Updated the vote link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
     <body>
         <div class="body-container">
-            <div class="aviso">AVISO: Através deste site, você está apenas realizando uma contagem pessoal de votos.<br>Para votar no esA, acesse o link da <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfBENrsyw0j0I7wSTOBse1WfyzJTz3PXwud55Frxmh1QdGarw/viewform">Votação</a>!</div>
+            <div class="aviso">AVISO: Através deste site, você está apenas realizando uma contagem pessoal de votos.<br>Para votar no esA, acesse o link da <a target="_blank" href="https://www.surveygizmo.com/s3/5982847/Vota-o-Pr-mio-CBLoL-2020">Votação</a>!</div>
             <div class="esa-card"></div>
             <div class="controls-label">Total de Votos:</div>
             <div class="controls">
@@ -21,7 +21,7 @@
                 <input type="button" value="+2" onclick="add(2)">
             </div>
             <div class="links">
-                <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfBENrsyw0j0I7wSTOBse1WfyzJTz3PXwud55Frxmh1QdGarw/viewform">Votação</a>
+                <a target="_blank" href="https://www.surveygizmo.com/s3/5982847/Vota-o-Pr-mio-CBLoL-2020">Votação</a>
                 <a target="_blank" href="https://discord.gg/Vm55chE">Discord</a>
             </div>
         </div>
